--- a/mqtt.conf
+++ b/mqtt.conf
@@ -1,5 +1,5 @@
 {
-    "connectionString": "A",
-    "pubTopic": "b",
-    "subTopic": "C"
+    "connectionString": "HostName=Hackathon.azure-devices.net;DeviceId=test;SharedAccessKey=6FvN22idJXCjqkH2MvyU3/cczM2qoqZraXvMG0J+kB8=",
+    "pubTopic": "devices/test/messages/events",
+    "subTopic": "devices/test/messages/events"
 }
