--- a/mqtt.conf
+++ b/mqtt.conf
@@ -2,7 +2,8 @@
     "connectionString": "HostName=Hackathon.azure-devices.net;DeviceId=test;SharedAccessKey=6FvN22idJXCjqkH2MvyU3/cczM2qoqZraXvMG0J+kB8=",
     "pubTopic": "devices/test/messages/events",
     "subTopic": "devices/test/messages/events",
-    "clientId":"test", 
+    "clientId": "test", 
+    "uri": "mqtts://Hackathon.azure-devices.net",
     "username": "Hackathon.azure-devices.net/test",
     "password": "SharedAccessSignature sr=Hackathon.azure-devices.net%2fdevices%2ftest&sig=ij47TnJNkE9yD8%2fgfH2RG6ev%2b6hZBCANMnL3jXQpvCY%3d&se=1456949902"
 }
