--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "azure-iot-device": "1.0.1",
     "azure-iot-device-amqp": "1.0.1",
     "azure-iot-device-http": "1.0.1",
-    "azure-iot-device-mqtt": "1.0.1"
+    "azure-iot-device-mqtt": "1.0.1",
+    "mqtt": "^1.7.3"
   },
   "devDependencies": {
     "jshint": "^2.8.0"
