Mode Serial debug

--- a/mqtt.conf
+++ b/mqtt.conf
@@ -1,9 +1,9 @@
 {
-    "connectionString": "OBTAIN FROM AzIoT DEVICEEXPLORER - Used by AzIoT SDK implementation to",
-    "clientId": "<DeviceID>", 
-    "uri": "mqtts://<HUBNAME>.azure-devices.net",
-    "username": "<HUBNAME>.azure-devices.net/<DeviceID>",
+    "connectionString": "HostName=Hackathon.azure-devices.net;DeviceId=test;SharedAccessKey=KTJpG0EPgfJ8kjOO8PXkg2parMEIdPNP1r7quRRCbsY=",
+    "clientId": "test", 
+    "uri": "mqtts://Hackathon.azure-devices.net",
+    "username": "Hackathon.azure-devices.net/test",
     "password": "OBTAIN SAS token FROM AzIoT DEVICEEXPLORER"
-    "pubTopic": "devices/<DeviceID>/messages/events",
+    "pubTopic": "devices/test/messages/events",
     "subTopic": "<TBC>",
 }
