Added Serial-MQTT link

--- a/mqtt.conf
+++ b/mqtt.conf
@@ -1,9 +1,9 @@
 {
-    "connectionString": "HostName=Hackathon.azure-devices.net;DeviceId=test;SharedAccessKey=KTJpG0EPgfJ8kjOO8PXkg2parMEIdPNP1r7quRRCbsY=",
+    "connectionString": "FROM IoT Hub",
     "clientId": "test", 
     "uri": "mqtts://Hackathon.azure-devices.net",
     "username": "Hackathon.azure-devices.net/test",
-    "password": "OBTAIN SAS token FROM AzIoT DEVICEEXPLORER"
+    "password": "SharedAccessSignature sr=Hackathon.azure-devices.net%2fdevices%2ftest&sig=ef4cdGvfwUCZpJ3yo6hNTu%2fZ%2bBVN27BfOfMIzq14t34%3d&se=1456916512"
     "pubTopic": "devices/test/messages/events",
     "subTopic": "<TBC>",
 }
