Mode Serial-MQTT enhancements

--- a/mqtt.conf
+++ b/mqtt.conf
@@ -5,5 +5,5 @@
     "username": "Hackathon.azure-devices.net/test",
     "password": "SharedAccessSignature sr=Hackathon.azure-devices.net%2fdevices%2ftest&sig=ef4cdGvfwUCZpJ3yo6hNTu%2fZ%2bBVN27BfOfMIzq14t34%3d&se=1456916512"
     "pubTopic": "devices/test/messages/events",
-    "subTopic": "<TBC>",
+    "subTopic": "devices/test/messages/devicebound/#",
 }
